tests/good/misc/arithmetic-progression.pas
program ArithmeticProgression;

var i;
begin
    for i := 1 to 20 do
        WriteLn(i + 10)
end.
